--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
+    "react-router-with-props": "^0.1.3",
     "react-scripts": "2.1.1"
   },
   "scripts": {
